# zerohour-aviation-backend

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  export.sh  pyproject.toml  railway.json  railway.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_signal_claim_tracking.py  0003_freight_foundation.py  0004_operator_mc_verification.py  0005_weekly_load_chains.py  0006_aviation_backend.py  0007_aviation_scheduled_arrival.py  0008_new_flight_bookings.py  0009_direct_airline_handoffs.py  0010_booking_engine_accounts.py  0011_saved_trip_offer_fields.py
app/: __init__.py  main.py
app/admin/: __init__.py
app/api/: __init__.py  deps.py
app/core/: config.py  logging.py  security.py
app/db/: __init__.py  session.py
app/engine/: __init__.py  prophfesy.py  weekly_chain.py
app/ingestion/: __init__.py  registry.py
app/integrations/: __init__.py  dat_integration.py  fred_integration.py  weather_integration.py
docs/: production_hardening.md
frontend-bridge/: README.md
scripts/: export_openapi.py  load_test_plan.md  load_test_signup.py  run_migrations.py  seed_operational_defaults.py  simulate_webhook.py
tests/: test_api_naming.py  test_aviation_scoring.py  test_aviation_security.py  test_dashboard_snapshot.py  test_flight_booking_engine.py  test_flight_options.py  test_mock_provider.py  test_new_flight_booking.py  test_production_hardening.py  test_proof_card.py  test_scoring.py  test_signal_claims.py  test_stripe_signature.py  test_zip_normalization.py
(+88 files in other folders)
