[project]
name = "zerohour-aviation-backend"
version = "0.1.0"
description = "FastAPI backend for ZeroHour Aviation flight disruption intelligence and direct booking"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "celery>=5.4.0",
  "cryptography>=42.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "passlib[bcrypt]>=1.7.4",
  "pillow>=10.4.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "pyjwt>=2.9.0",
  "redis>=5.0.8",
  "sentry-sdk[fastapi]>=2.14.0",
  "sqlalchemy>=2.0.35",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
